# django-acl

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint_and_test.yml
apps/acl/: mixin.py  models.py  utils.py  views.py
apps/acl/fixtures/: test.json
apps/acl/migrations/: 0001_initial.py  0002_auto_20210225_1402.py  0003_auto_20210225_1445.py
apps/acl/templates/: acls.html
apps/acl/templates/components/: acl.html  user_permission.html
apps/commands/management/commands/: acl.py
apps/example/: models.py
apps/example/migrations/: 0001_initial.py
config/settings/: base.py  local.py  test.py
tests/commands/: test_uml.py
