[tool.poetry]
name = "django-uml"
version = "1.0.0"
description = ""
authors = ["Thijs Baaijen <Thijss@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
django-extensions = "^3.1.0"
django-environ = "^0.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MASTER']
load-plugins = "pylint_django"
django-settings-module="config.settings.test"
disable=[
  "duplicate-code", # disabled since it detects too many false positives
]
[tool.coverage.report]
omit = [
  "*/config/settings*",
]
